[project]
name = "freiday-programm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=16.1.0",
    "fastapi[all]>=0.135.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "streamlit-webrtc>=0.65.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tornado>=6.5.5",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "uvicorn>=0.42.0",
]

[tool.uv.workspace]
members = [
    "start_garbage_collection.py",
]
